--- a/Ortho4XP.cfg
+++ b/Ortho4XP.cfg
@@ -50,6 +50,7 @@ terrain_casts_shadows=True
 use_decal_on_terrain=False
 FSX_P3D_resample_loc=F:\\ortho4xpvm\\resample.exe
 FS9_resample_loc=F:\\ortho4xpvm\\resampleFS2004.exe
+FS9_imagetool_loc=F:\\ortho4xpvm\\imagetool.exe
 ESP_scenproc_loc=C:\\Users2sddsfs\\fery2\\Desktop\\scenproc_latest_development_release_x64\\scenProc.exe
 ESP_scenproc_script=default.spc
 max_resample_processes=8
