fix crash when renaming imgs for fs9

--- a/Ortho4XP.cfg
+++ b/Ortho4XP.cfg
@@ -54,7 +54,7 @@ FS9_imagetool_loc=F:\\ortho4xpvm\\imagetool.exe
 ESP_scenproc_loc=C:\\Users2sddsfs\\fery2\\Desktop\\scenproc_latest_development_release_x64\\scenProc.exe
 ESP_scenproc_script=default.spc
 max_resample_processes=8
-create_ESP_night=True
+create_ESP_night=False
 create_ESP_summer=True
 create_ESP_spring=False
 create_ESP_fall=False
