improvements in osm
1) use already downloaded osm files as cache
2) do fs9 imagetool stuff without having to wait for scenproc to finish

--- a/Ortho4XP.cfg
+++ b/Ortho4XP.cfg
@@ -51,8 +51,8 @@ use_decal_on_terrain=False
 FSX_P3D_resample_loc=F:\\ortho4xpvm\\resample.exe
 FS9_resample_loc=F:\\ortho4xpvm\\resampleFS2004.exe
 FS9_imagetool_loc=F:\\ortho4xpvm\\imagetool.exe
-ESP_scenproc_loc=C:\\Users2sddsfs\\fery2\\Desktop\\scenproc_latest_development_release_x64\\scenProc.exe
-ESP_scenproc_script=default.spc
+ESP_scenproc_loc=C:\\Users\\fery2\\Desktop\\scenproc_latest_development_release_x64\\scenProc.exe
+ESP_scenproc_script=FS2004_OSM_MAY_2020.spc
 max_resample_processes=8
 create_ESP_night=False
 create_ESP_summer=True
